One day ill like how this app looks

--- a/project/SPTarkov.Launcher/wwwroot/index.html
+++ b/project/SPTarkov.Launcher/wwwroot/index.html
@@ -1,12 +1,12 @@
 ﻿<!DOCTYPE html>
-<html style="background-color: rgba(50,51,61,1);">
+<html style="background-color: rgba(39, 39, 47, 1);">
     <head>
         <meta charset="utf-8"/>
         <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
         <title>CWX-SPT-Frontend</title>
         <base href="/"/>
-        <link href="MudBlazor.min.css" rel="stylesheet"/>
         <link href="app.css" rel="stylesheet">
+        <link href="MudBlazor.min.css" rel="stylesheet"/>
     </head>
     <body>
         <app>Loading...</app>
@@ -17,8 +17,8 @@
             <a class="dismiss">X</a>
         </div>
 
-        <script src="_framework/blazor.webview.js"></script>
         <script src="MudBlazor.min.js"></script>
+        <script src="_framework/blazor.webview.js"></script>
         <script src="app.js"></script>
         <script src="userTabset.js"></script>
     </body>
